--- a/FRONT/src/app/Pages/usuario/cadastrar-usuario/cadastrar-usuario.component.html
+++ b/FRONT/src/app/Pages/usuario/cadastrar-usuario/cadastrar-usuario.component.html
@@ -5,24 +5,19 @@
   <mat-card-content>
     
     <mat-form-field class="input" id="nome">
-      <mat-label for="nome">Nome:</mat-label>
-      <br>
+      <p>       <mat-label for="nome">Nome:</mat-label>
+      </p>
+
+      <p> </p>
       <input matInput type="text" name="nome" [(ngModel)]="nome" />
-      <br> <br/> <br/>
+      <p> </p>
 
     </mat-form-field>
-    <br> <br/>
+    <p> </p>
 
     <mat-label for="txtData">Data de nascimento</mat-label>
-    <br> <br/>
     <mat-form-field id="nascimento" class="input">
-      <br> <br/>
-
- 
-
       <input matInput type="date" name="nascimento" id="txtData" [(ngModel)]="nascimento" />
-      <br> <br/>
-
     </mat-form-field>
   </mat-card-content>
 
